# UAH_2018_2019

./: .gitmodules  README.md
CUATRI1/ALGORITMIA/Juan_Casado_Ballesteros_09108762A_Algoritmia_lab/: README.md
CUATRI1/BBDD/TEO/: Silberschatz-4.rtf
CUATRI1/ROBOTICA/MIMI_PROYECTOS/: .Control_Sensor_Luz.docx.icloud  .Control_Sensor_Luz.pdf.icloud  Control del sensor de ultrasonidos.docx  Id_sound.nxc  Id_sound.sym  odom.bak  odom.nxc  odom.sym  paralelo.bak  paralelo.nxc  paralelo.sym  sigueLineas.bak  sigueLineas.nxc  sigueLineas.sym
ENGLISH/: links.txt
GESTION/TEO/: PECT1.xlsm  PECT1.xlsx
IA/TEO/ARTICULO1/: Breve historia de la Inteligencia artificial.docx
LENGUAJES/LAB/: COMANDOS_ANTLR.rtf
LENGUAJES/LAB/JAVA/: main.java  makefile
PROGRAMACION/: CUDA_Setup.txt
PROGRAMACION/LAB/JOURNALS/: journal_links.save  journal_sent.txt  rule_link.txt
PROGRAMACION/LAB/PECL0/matrix_multiplier/matrix_multiplier/: CMakeLists.txt  matrix_multiplier.cpp  matrix_multiplier.h
PROGRAMACION/LAB/PECL0/vector_multiplier/: CMakeLists.txt
PROGRAMACION/LAB/PECL0/vector_multiplier/vector_multiplier/: CMakeLists.txt  vector_multiplier.cpp  vector_multiplier.h
ROBOTICA/: Id_sound.nxc  Identificación del sensor de ultrasonidos.docx  Odometria_monitorización.docx  Robot velocista.docx  odom.nxc  sigueLineas.sym
ROBOTICA/MIMI_PROYECTOS/: Identificación_sensor_luz.docx  Odometria_cuadrado.docx  odom.bak  odom.sym  sigueLineas.bak  sigueLineas.nxc
ROBOTICA/PROYECTO_FINAL/: OdometriaBot.nxc  OdometriaBot.sym  serbo.bak  serbo.nxc  serbo.sym
(+182 files in other folders)
