# CMakeList.txt: proyecto de CMake para matrix_multiplier, incluya el origen y defina
# la lógica específica del proyecto aquí.
#
cmake_minimum_required (VERSION 3.8)

# Agregue un origen al ejecutable de este proyecto.
add_executable (matrix_multiplier "matrix_multiplier.cpp" "matrix_multiplier.h")

# TODO: Agregue pruebas y destinos de instalación si es necesario.
