# CMakeList.txt: proyecto de CMake para vector_multiplier, incluya el origen y defina
# la lógica específica del proyecto aquí.
#
cmake_minimum_required (VERSION 3.8)

# Agregue un origen al ejecutable de este proyecto.
add_executable (vector_multiplier "vector_multiplier.cpp" "vector_multiplier.h")

# TODO: Agregue pruebas y destinos de instalación si es necesario.
